@@ -1,3 +1,8 @@
+2004-08-04  Andreas Kupries  <andreask@activestate.com>
+
+	* library/zipvfs.tcl: Fixed [SF Tclvfs Bug 1003574]. Added code
+	  preventing us from seeking before the beginning of the zip file.
+
 2004-07-15  Andreas Kupries  <andreask@activestate.com>
 
 	* doc/vfs-fsapi.man: Clarified description of the close callback
